fix three.js on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -57,4 +57,5 @@ svg {
   display: block;
   max-width: 100%;
   user-select: none;
+  pointer-events: none;
 }
